<resources>
    <string name="app_name">dietLogging</string>
    <string name="button_save">Save</string>
    <string name="participant_number">Participant Number</string>
    <string name="full_name">Full Name</string>
    <string name="diet_choice">Diet Choice</string>
    <string name="diet_control">Control</string>
    <string name="diet_low_sug">LOW SUG</string>
    <string name="diet_low_cho">LOW CHO</string>
    <string name="grams">Serving in Grams</string>
    <string name="empty_not_saved">Not saved because it is empty.</string>
    <string name="not_action_performed">Not any action performed.</string>
    <string name="date_time">Date/Time DD/MM/YY HH:MM</string>
    <string name="food">Food</string>
    <string name="meal">Meal</string>
    <string name="hunger">Hunger Right Now (%)</string>
    <string name="register">Register</string>
    <string name="add_food">Add Food</string>
    <string-array name="meal_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>

    </string-array>

    <string-array name="notif_array">
        <item>Daily</item>
        <item>Every three days</item>
        <item>Weekly</item>
        <item>Monthly</item>

    </string-array>
    <string name="notifications">Reminder</string>
    <string name="edit_food">Edit Food</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="update_food">Update Food</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="macros">MACROS</string>
    <string name="food_diary">FOOD DIARY</string>
    <string name="title_activity_home">Diet Logging</string>
    <string name="frequently_added">Frequently Added</string>
    <string name="search_results">Search Results</string>
    <string name="search_food">Search Food Database</string>\
    <string name="search_hint">Search</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="time">Time</string>
    <string name="cho">CHO[SUG](%)</string>
    <string name="fat">FAT(%)</string>
    <string name="pro">PRO(%)</string>
    <string name="target">TARGET</string>
    <string name="cons">CONSUMED</string>
    <string name="rem">REMAINING</string>
    <string name="export_csv">EXPORT CSV</string>
    <string name="csv_exported">The CSV file is exported to your device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_diary_fr">FOOD DIARY</string>


</resources>