<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/participant_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/participant_number"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusForward="@id/full_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusForward="@id/diet_choice" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/diet_choice"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/diet_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/diet_choice_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="100dp"
                android:text="@string/diet_control"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/diet_choice_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:checked="false"
                android:paddingHorizontal="100dp"
                android:text="@string/diet_low_sug"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/diet_choice_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:checked="false"
                android:paddingHorizontal="100dp"
                android:text="@string/diet_low_cho"
                android:textSize="20sp" />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/notifications"
            android:textSize="24sp" />

        <Spinner
            android:layout_marginTop="15dp"
            android:id="@+id/notification_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown">


        </Spinner>

        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_update"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>