<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            >

            <EditText
                android:id="@+id/participant_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/participant_number"
                android:nextFocusForward="@id/full_name"
                android:inputType="number"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/full_name"
                android:id="@+id/full_name"
                android:nextFocusForward="@id/diet_choice"
                android:inputType="text"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/diet_choice"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/diet_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp">

            <RadioButton
                android:id="@+id/diet_choice_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diet_control"
                android:paddingHorizontal="100dp"
                android:textSize="20sp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/diet_choice_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="100dp"
                android:text="@string/diet_low_sug"
                android:textSize="20sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/diet_choice_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="100dp"
                android:text="@string/diet_low_cho"
                android:textSize="20sp"
                android:checked="false"
                />


        </RadioGroup>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:background="@color/colorPrimary"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>